@@ -13,7 +13,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 public class SourceIndex {
     private String source;
@@ -159,7 +158,7 @@ public class SourceIndex {
             Collection<Token> newTokens = oldTokens
                     .stream()
                     .map(result::getRemappedToken)
-                    .collect(Collectors.toList());
+                    .toList();
 
             remapped.referenceToTokens.putAll(reference, newTokens);
         }
